# django-referral

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test.txt  tox.ini
.github/workflows/: linters.yml  tests.yml
referral/: admin.py  compat.py  middleware.py  models.py  settings.py
referral/migrations/: 0001_initial.py  0002_auto_20230623_2008.py  0002_auto__add_field_campaign_pattern.py  0002_referrer_user.py
referral/south_migrations/: 0001_initial.py  0002_auto__add_field_campaign_pattern.py  0003_auto__add_field_campaign_start_date__add_field_campaign_end_date.py
referral/tests/: factories.py  middlewares_tests.py  models_tests.py  runtests.py  settings.py  test_middlewares.py  test_models.py
