[tool.poetry]
name = "django-referral"
version = "2.0.0b0"
description = "A small django application for marketing using referral links."
authors = ["Fabian <ihl.fabian@gmail.com>", "Richard <richard@stromer.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
