[tool.poetry]
name = "django-referral"
version = "2.0.0b0"
description = "A small django application for marketing using referral links."
authors = ["Fabian <ihl.fabian@gmail.com>", "Richard <richard@stromer.org>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "referral" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"
coverage = "^7.3.2"
pyright = "^1.1.329"
django-types = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
